mobile asset database connection

--- a/raon-control/m_asset.html
+++ b/raon-control/m_asset.html
@@ -29,9 +29,10 @@
         background-color: black;
         background-image: url('images/masset_bg.png');
         background-repeat: no-repeat;
+        background-attachment: fixed;
         background-position: center;
-        background-size: 100%;
-        overflow: hidden;
+        background-size: 200%;
+        /* overflow: hidden; */
         text-align: center;
         color: white;
         font-family: "Helvetica-Neue-Light";
@@ -46,7 +47,7 @@
     }
 
     .polygon-style {
-        fill:#0094c5;
+        fill: #0094c5;
         opacity: 0.07;
     }
 </style>
@@ -54,6 +55,7 @@
 <body>
 
     <!-- Top Polygon -->
+    <!-- 1 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -66,6 +68,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 2 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -78,6 +81,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 3 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -90,6 +94,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 4 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -102,6 +107,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 5 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -114,6 +120,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 6 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -126,6 +133,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 7 -->
     <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -138,35 +146,9 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="top-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
 
     <!-- Bottom Polygon -->
+    <!-- 1 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -179,6 +161,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 2 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -191,6 +174,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 3 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -203,6 +187,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 4 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -215,6 +200,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 5 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -227,6 +213,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 6 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -239,6 +226,7 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
+    <!-- 7 -->
     <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
@@ -251,52 +239,47 @@
         <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
     </svg>
 
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
-
-    <svg class="bottom-polygon" width="60" height="52" viewBox="0 0 60 52">
-        <polygon class="polygon-style" points="45 0 15 0 0 26 15 52 45 52 60 26 45 0" />
-    </svg>
 
     <div style="font-size: 5vw; margin-top: 1vh; color: #CCCCCC">Accelerator Control Asset Manager</div>
-    <div id="asset-number" style="font-size: 8vw; margin-top: 8vh; color:#00A99D">198306192</div>
-    <div id="asset-date" style="font-size: 5vw; margin-top: 0.5vh; color: #CCCCCC">2020-06-19</div>
+    <div id="asset-number" style="font-size: 8vw; margin-top: 8vh; color:#00A99D"></div>
+    <div id="asset-date" style="font-size: 5vw; margin-top: 0.5vh; color: #CCCCCC"></div>
 
-    <div id="asset-image" style="width:80%; margin:auto; margin-top: 2vh"><img src="images/1.JPG" style="width:100%; height:auto"></div>
+    <div style="overflow:hidden; width:80vw; height: 60vw; margin:auto; margin-top: 2vh;"><img id="asset-image"
+            src="" style="width:100%; height:auto"></div>
 
-    <div id="asset-name" style="font-size: 5vw; margin-top: 0vh; font-family: NotoSansKR-Regular">iPhone</div>
-    <div id="asset-location" style="font-size: 5vw; margin-top: 1vh; font-family: NotoSansKR-Regular">중앙제어센터 1층 가속기제어팀
-    </div>
-    <div id="asset-manamger" style="font-size: 6vw; margin-top: 1vh; font-family: NotoSansKR-Regular">손창욱</div>
+    <div id="asset-name" style="font-size: 5vw; margin-top: 1vh; font-family: NotoSansKR-Regular"></div>
+    <div id="asset-location" style="font-size: 5vw; margin-top: 1vh; font-family: NotoSansKR-Regular"></div>
+    <div id="asset-manager" style="font-size: 6vw; margin-top: 1vh; font-family: NotoSansKR-Regular"></div>
+
+    <svg id="control-logo" width="121" height="50" viewBox="0 0 242 50">
+        <path id="path7109" d="M34.9761,30.7607a11.428,11.428,0,1,1,0-11.428" transform="translate(-0.5 0.0703)"
+            style="fill:none;stroke:#00a2cc;stroke-linecap:round;stroke-miterlimit:10" />
+        <path id="path7111" d="M25.0791,25.0214H232.9907" transform="translate(-0.5 0.0703)"
+            style="fill:none;stroke:#00a2cc;stroke-linecap:round;stroke-miterlimit:10" />
+        <circle id="circle7113" cx="234.7921" cy="25.0971" r="5.7079" style="fill:#00a2cc" />
+        <path id="path7115" d="M41.94,30.7705a17.7767,17.7767,0,1,1,.029-11.4559" transform="translate(-0.5 0.0703)"
+            style="fill:none;stroke:#00a2cc;stroke-linecap:round;stroke-miterlimit:10" />
+        <path id="path7117" d="M48.5439,30.8006a24.126,24.126,0,1,1,.0308-11.4752" transform="translate(-0.5 0.0703)"
+            style="fill:none;stroke:#00a2cc;stroke-linecap:round;stroke-miterlimit:10" /><text
+            transform="translate(60.0034 19.7118)"
+            style="font-size:23.042280197143555px;fill:#00a2cc;font-family:Roboto-Light, Roboto;font-weight:300">
+            <tspan style="letter-spacing:-0.005361238349376295em">A</tspan>
+            <tspan x="14.2666" y="0">CCELER</tspan>
+            <tspan x="97.1758" y="0" style="letter-spacing:-0.06297865760611206em">A</tspan>
+            <tspan x="110.1147" y="0" style="letter-spacing:-0.01366797919109767em">T</tspan>
+            <tspan x="123.5596" y="0">OR</tspan>
+            <tspan x="25.5347" y="27.6509">CO</tspan>
+            <tspan x="56.0928" y="27.6509" style="letter-spacing:-0.014155364495586423em">N</tspan>
+            <tspan x="72.1255" y="27.6509">TROL</tspan>
+        </text>
+    </svg>
 </body>
 
 <script>
-    // console.log(window.innerWidth);
-
     var topPolygonSVGElement = document.getElementsByClassName('top-polygon');
     var bottomPolygonSVGElement = document.getElementsByClassName('bottom-polygon');
 
+    // iPhone 6s 
     var defaultWidth = 375;
     var defaultHeight = 667;
 
@@ -321,19 +304,11 @@
     var horizontalDt = 48 * 2 * viewBoxScaleWidth;
     var verticalDt = 56 * viewboxScaleHeight;
 
-    var bottomPolygonOffset = 300 * viewboxScaleHeight;
-    // var verticalShiftDt = verticalDt / 2;
-
-
-    // topPolygonSVGElement[0].style.left = horizontalInitPos + 'px';
-    // topPolygonSVGElement[0].style.top = verticalInitPos + 'px';
-
-    // topPolygonSVGElement[1].style.left = horizontalInitPos + horizontalDt + 'px';
-    // topPolygonSVGElement[1].style.top = verticalInitPos + verticalDt + 'px';
+    var bottomPolygonOffset = 330 * viewboxScaleHeight;
 
     var polygonCount = 0;
     for (let i = 0; i < 4; i++) {
-        for (let k = 0; k < 4; k++) {
+        for (let k = 0; k < 3; k++) {
             topPolygonSVGElement[polygonCount].style.left = horizontalInitPos + (i * horizontalDt) + 'px';
             topPolygonSVGElement[polygonCount].style.top = verticalInitPos + (k * verticalDt) + 'px';
 
@@ -348,7 +323,7 @@
     verticalInitPos += verticalDt / 2;
 
     for (let i = 0; i < 3; i++) {
-        for (let k = 0; k < 4; k++) {
+        for (let k = 0; k < 3; k++) {
             topPolygonSVGElement[polygonCount].style.left = horizontalInitPos + (i * horizontalDt) + 'px';
             topPolygonSVGElement[polygonCount].style.top = verticalInitPos + (k * verticalDt) + 'px';
 
@@ -359,32 +334,66 @@
 
         }
     }
-        // var verticalDt = 112;
-        // var verticalShiftDt = verticalDt / 2;
-        // var horizontalDt = 97;
-        // var topPolygonInitPos = 600;
-        // var bottomPolygonInitPos = 1200;
 
-        // var polygonCount = 0;
+    var controlLogoID = document.getElementById('control-logo');
+    
+    var controlLogoViewBoxWidth = 242 * viewBoxScaleWidth;
+    var controlLogoViewBoxHeight = 50 * viewboxScaleHeight;
+    controlLogoViewBox = "0 0 " + controlLogoViewBoxWidth + " " + controlLogoViewBoxHeight;
 
-        // for (var j = 0; j < 6; j++) {
-        //     var num = 7 - j;
-        //     var hShift = j * horizontalDt;
-        //     var vShift = j * verticalShiftDt;
-        //     var animationDelay = j / 20;
+    controlLogoID.setAttribute("viewBox", controlLogoViewBox);
 
-        //     for (var i = 0; i < num; i++) {
+    var serverAddr = 'http://192.168.68.14'
+    var imageServer = serverAddr + ':4879/asset_image/'
+    var inventoryAddr = serverAddr + ':9010/inventory'
+    var retrieveAddr = inventoryAddr + '/retrieve/*';
 
+    // Get Asset Data From Database
+    function getAssetData() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                var jsonValue = JSON.parse(this.responseText);
+                createAssetPage(jsonValue);
+            }
+            // else {
+            // 	alert('Status Error : ' + this.status);
+            // }
 
-        //         topPolygonSVGElement[polygonCount].style.left = topPolygonInitPos - hShift + 'px';
-        //         topPolygonSVGElement[polygonCount].style.top = (verticalInitPos + vShift) + verticalDt * i + 'px';
+        };
 
-        //         bottomPolygonSVGElement[polygonCount].style.left = bottomPolygonInitPos + hShift + 'px';
-        //         bottomPolygonSVGElement[polygonCount].style.top = (verticalInitPos + vShift) + verticalDt * i + 'px';
+        var rName = serverAddr + ':9010/inventory/retrieve/' + window.location.search.substr(1);
+        xhttp.open("GET", rName, false);
+        xhttp.send();
+    }
 
-        //         polygonCount += 1;
-        //     }
-        // }
+    function createAssetPage(assetData) {
+
+        var assetNumberID = document.getElementById('asset-number');
+        var assetDateID = document.getElementById('asset-date');
+        var assetImageID = document.getElementById('asset-image');
+        var assetNameID = document.getElementById('asset-name');
+        var assetLocationID = document.getElementById('asset-location');
+        var assetManagerID = document.getElementById('asset-manager');
+
+        assetNumberID.innerText = assetData[0].assetNumber;
+        assetDateID.innerText = assetData[0].date;
+        assetNameID.innerText = assetData[0].deviceName;
+        assetLocationID.innerText = assetData[0].location;
+        assetManagerID.innerText = assetData[0].manager;
+
+        if (assetData[0].fileName) {
+        	assetImageID.src = imageServer + assetData[0].id + '/' + assetData[0].fileName;
+        }
+        else {
+        	assetImageID.src = 'images/noImage.svg';
+        }
+    }
+
+    window.onload = function () {
+        getAssetData();
+    }
+
 </script>
 
 </html>
