--- a/raon-control/m_asset.html
+++ b/raon-control/m_asset.html
@@ -9,7 +9,7 @@
         src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
     }
 
-    /* @font-face {
+    @font-face {
         font-family: "Roboto-Thin";
         src: url(fonts/Roboto-Thin.ttf);
     }
@@ -17,7 +17,7 @@
     @font-face {
         font-family: "Roboto-Light";
         src: url(fonts/Roboto-Light.ttf);
-    } */
+    }
 
     @font-face {
         font-family: "NotoSansKR-Regular";
